// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataSearch drop 1`] = `
.c3 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c3 g {
  fill: inherit;
  stroke: inherit;
}

.c3 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c3 *[stroke*='#'],
.c3 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c3 *[fill-rule],
.c3 *[FILL-RULE],
.c3 *[fill*='#'],
.c3 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c2 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c2:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2:focus:not(:focus-visible) >circle,
.c2:focus:not(:focus-visible) >ellipse,
.c2:focus:not(:focus-visible) >line,
.c2:focus:not(:focus-visible) >path,
.c2:focus:not(:focus-visible) >polygon,
.c2:focus:not(:focus-visible) >polyline,
.c2:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <button
      aria-label="Open search"
      class="c2"
      id="test-data--search-control"
      type="button"
    >
      <svg
        aria-label="Search"
        class="c3"
        viewBox="0 0 24 24"
      >
        <path
          d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
          fill="none"
          stroke="#000"
          stroke-width="2"
          vector-effect="non-scaling-stroke"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`DataSearch drop 2`] = `
<button
  aria-label="Open search"
  class="StyledButtonKind-sc-1vhfpnt-0 gmTBeV"
  data-g-tabindex="none"
  id="test-data--search-control"
  tabindex="-1"
  type="button"
>
  <svg
    aria-label="Search"
    class="StyledIcon-sc-ofa7kd-0 iXbCzE"
    viewBox="0 0 24 24"
  >
    <path
      d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
      fill="none"
      stroke="#000"
      stroke-width="2"
      vector-effect="non-scaling-stroke"
    />
  </svg>
</button>
`;

exports[`DataSearch drop 3`] = `
"@media only screen and (max-width: 768px) {
  .kizEOJ {
    margin-bottom: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .kKSyyE {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .kKSyyE {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}
@media only screen and (max-width: 768px) {
  .coNAXt {
    margin-top: 12px;
  }
}"
`;

exports[`DataSearch no Data 1`] = `
.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  padding-left: 42px;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #676767;
}

.c5::-moz-placeholder {
  color: #676767;
}

.c5:-ms-input-placeholder {
  color: #676767;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  font-weight: 400;
}

.c5::-moz-placeholder {
  font-weight: 400;
}

.c5:-ms-input-placeholder {
  font-weight: 400;
}

.c2 {
  position: relative;
  width: 100%;
}

.c2 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 13px;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        aria-label="Search"
        autocomplete="off"
        class="c5"
        id="undefined--search"
        name="_search"
        type="search"
      />
    </div>
  </div>
</div>
`;

exports[`DataSearch renders 1`] = `
.c11 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 8px;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c7 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c14 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c14:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c14:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c14:focus >circle,
.c14:focus >ellipse,
.c14:focus >line,
.c14:focus >path,
.c14:focus >polygon,
.c14:focus >polyline,
.c14:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c14:focus ::-moz-focus-inner {
  border: 0;
}

.c14:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c14:focus:not(:focus-visible) >circle,
.c14:focus:not(:focus-visible) >ellipse,
.c14:focus:not(:focus-visible) >line,
.c14:focus:not(:focus-visible) >path,
.c14:focus:not(:focus-visible) >polygon,
.c14:focus:not(:focus-visible) >polyline,
.c14:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c14:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c12 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  outline: none;
  border: none;
  padding-left: 42px;
}

.c12::-webkit-input-placeholder {
  color: #676767;
}

.c12::-moz-placeholder {
  color: #676767;
}

.c12:-ms-input-placeholder {
  color: #676767;
}

.c12 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c12::-moz-focus-inner {
  border: none;
  outline: none;
}

.c12:-moz-placeholder,
.c12::-moz-placeholder {
  opacity: 1;
}

.c12::-webkit-input-placeholder {
  font-weight: 400;
}

.c12::-moz-placeholder {
  font-weight: 400;
}

.c12:-ms-input-placeholder {
  font-weight: 400;
}

.c9 {
  position: relative;
  width: 100%;
}

.c9 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c10 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 13px;
}

.c6 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c6 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c6 [class*="ContentBox"] [role="group"],
.c6 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c6 [class*="ContentBox"] [role="group"] label,
.c6 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c6 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c6 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    margin-top: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data--search"
                id="grommet-data--search__label"
              >
                Search
              </label>
              <div
                class="c8 "
              >
                <div
                  class="c9"
                >
                  <div
                    class="c10"
                  >
                    <svg
                      aria-label="Search"
                      class="c11"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                  <input
                    aria-label="Search"
                    autocomplete="off"
                    class="c12"
                    id="data--search"
                    name="_search"
                    type="search"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c13"
        >
          <button
            class="c14"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;
